--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --inspect=0.0.0.0:9310 index.js",
+    "dev": "node -r dotenv/config --inspect=0.0.0.0:9310 index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/wepublish/extra-extra#readme",
   "dependencies": {
-    "@apollo/client": "^3.3.20",
     "@slack/webhook": "^6.0.0",
     "@urql/core": "^2.1.3",
     "express": "^4.16.3",
     "graphql": "^15.4.0",
-    "graphqurl": "^1.0.1",
+    "node-fetch": "^2.6.1",
     "rss-parser": "^3.12.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
